docs/v3.5.3/_sources/gallery/experiment/sphere/sphere_coupling_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_coupling_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_coupling_vs_diameter.py:


Sphere: Coupling vs diameter
============================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-17

.. code-block:: Python

    import numpy
    from PyMieSim.experiment.detector import CoherentMode
    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material
    from PyMieSim.units import nanometer, degree, watt, AU, RIU








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 19-25

.. code-block:: Python

    source = Gaussian(
        wavelength=1200 * nanometer,
        polarization=0 * degree,
        optical_power=1e-3 * watt,
        NA=[0.1] * AU
    )







.. GENERATED FROM PYTHON SOURCE LINES 26-27

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 27-34

.. code-block:: Python

    scatterer = Sphere(
        diameter=numpy.linspace(100, 10000, 600) * nanometer,
        property=Material.BK7,
        medium_property=1.0 * RIU,
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Defining the detector to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 36-47

.. code-block:: Python

    detector = CoherentMode(
        mode_number=['LP01', 'LP11', 'LP02'],
        NA=0.2 * AU,
        rotation=0 * degree,
        phi_offset=0.0 * degree,
        gamma_offset=0.0 * degree,
        sampling=600 * AU,
        mean_coupling=True,
        polarization_filter=None
    )








.. GENERATED FROM PYTHON SOURCE LINES 48-49

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 49-51

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/PyOptik/material/base_class.py:60: UserWarning: Wavelength range goes from 1.2000000000000002 µm to 1.2000000000000002 µm which is outside the allowable range of 5.0 µm to 33.333 µm µm. [Material: BK7]
      warnings.warn(




.. GENERATED FROM PYTHON SOURCE LINES 52-53

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: Python

    dataframe = experiment.get('a1', drop_unique_level=True, scale_unit=True)








.. GENERATED FROM PYTHON SOURCE LINES 56-57

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 57-58

.. code-block:: Python

    dataframe.plot(x='scatterer:diameter')



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_diameter_001.png
   :alt: sphere coupling vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='scatterer:diameter', ylabel='dimensionless'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.785 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_coupling_vs_diameter.ipynb <sphere_coupling_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_coupling_vs_diameter.py <sphere_coupling_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_coupling_vs_diameter.zip <sphere_coupling_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
